# test_ml_task

./: .gitignore  Dockerfile  README.md  classifier.py  docker-compose.yml  env.example  pyproject.toml  run.py  run_server.py  run_standalone.py
app/: classifier.py  exceptions.py  settings.py
docker/worker/: Dockerfile  settings.py
tests/: test_classifier.py
